@@ -1,3 +1,6 @@
+- New Feature: Creation of payment reference codes by finantial entity, in academic debt generation rule for payment codes strategy [#qubIT-Fenix-4600]
+- Improvement: Method to obtain the associated finantial entity by academic treasury event [#qubIT-Fenix-4598]
+
 11.1.6 (31-10-2023)
 - Refactor: Rename method PaymentRequestLog#isInvocationSuccess to PaymentRequestLog#isOperationSuccess [#qubIT-Fenix-4327]
 
